--- a/CookieTTS/_5_infer/VDVAETTS_server/templates/main.html
+++ b/CookieTTS/_5_infer/VDVAETTS_server/templates/main.html
@@ -128,22 +128,22 @@
                                 <option value="interleaved" {{ 'selected' if multispeaker_mode == 'interleaved' else '' }}>Interleaved (seperate speaker for each text segment, going from top to bottom)</option>
                                 <option value="not_interleaved" {{ 'selected' if multispeaker_mode == 'not_interleaved' else '' }}>Non-Interleaved (speaker going from top to bottom per clip attempt)</option>
                             </select></div>
-                        <div class="form-group">
-                            <label for="select">Global Sigma Scaler</label>
-                            <label style="zoom: 0.7;">(Controls randomness of the output, higher = more random/'emotive')</label>
-                            <input style="width: -webkit-fill-available;" class="form-control" value="{{global_sigma}}" type="number" min="0.00" max="1.0" step="0.01" name="input_global_sigma">
-                        </div>
-                        <div class="form-group">
-                            <label for="select">Char Sigma Scaler</label>
-                            <label style="zoom: 0.7;">(Controls randomness of the output, higher = more random/'emotive')</label>
-                            <input style="width: -webkit-fill-available;" class="form-control" value="{{char_sigma}}" type="number" min="0.00" max="1.0" step="0.01" name="input_char_sigma">
-                        </div>
-                        <div class="form-group">
-                            <label for="select">Frame Sigma Scaler</label>
-                            <label style="zoom: 0.7;">(Controls randomness of the output, higher = more random/'emotive')</label>
-                            <input style="width: -webkit-fill-available;" class="form-control" value="{{frame_sigma}}" type="number" min="0.00" max="1.0" step="0.01" name="input_frame_sigma">
-                        </div>
                     </div>
+					<div class="form-group">
+						<label for="select">Speaker/Audio Condition Randomness</label>
+						<label style="zoom: 0.7;">(Controls randomness of the entire spectrogram, higher = more random)</label>
+						<input style="width: -webkit-fill-available;" class="form-control" value="{{global_sigma}}" type="number" min="0.00" max="1.0" step="0.01" name="input_global_sigma">
+					</div>
+					<div class="form-group">
+						<label for="select">Pacing Randomness</label>
+						<label style="zoom: 0.7;">(Controls randomness of the pacing, higher = more random/'emotive')</label>
+						<input style="width: -webkit-fill-available;" class="form-control" value="{{char_sigma}}" type="number" min="0.00" max="1.0" step="0.01" name="input_char_sigma">
+					</div>
+					<div class="form-group">
+						<label for="select">Local Randomness</label>
+						<label style="zoom: 0.7;">(Controls randomness of the local spectrogram, higher = more random/'emotive')</label>
+						<input style="width: -webkit-fill-available;" class="form-control" value="{{frame_sigma}}" type="number" min="0.00" max="1.0" step="0.01" name="input_frame_sigma">
+					</div>
                 <div class="form-group">
                     <label for="select">Speaker(s)</label>
                     <label style="zoom: 0.6;">(You can select more than one)</label>
